[project]
name = "entropy-reranker"
version = "0.1.0"
description = ""
authors = [
    {name = "anotherBadCode",email = "abhisheksharma026@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
name = "entropy_reranker"
version = "0.1.0"
description = "Reranker with entropy-regularized AFL and XGBoost"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "entropy_reranker", from = "src" }]

[tool.poetry.scripts]
entropy-reranker = "entropy_reranker.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
